--- a/src/AppBundle/Resources/translations/FOSUserBundle.en.yml
+++ b/src/AppBundle/Resources/translations/FOSUserBundle.en.yml
@@ -34,7 +34,7 @@ change_password:
 registration:
     check_email: 'An email has been sent to %email%. It contains an activation link they must click to activate the account.'
     confirmed: 'Congrats %username%, your account is now activated.'
-    back: 'Back to the originating page.'
+    back: 'Go to your account now.'
     submit: Register
     flash:
         user_created: 'The user has been created successfully'
